#2956 fixed overflow of text in product details

--- a/web/assets/css/product-page-css.css
+++ b/web/assets/css/product-page-css.css
@@ -807,18 +807,28 @@ body{
 
 .p-html-description h1, .p-html-description h2, 
 .p-html-description h3, .p-html-description h4, .p-html-description h5 {
+    height: auto !important;
     margin: 0 !important;
     padding: 30px 0 !important;
 }
 
-.p-html-description div,
-.p-html-description table {
+.p-html-description div, .p-html-description table, .p-html-description p {
     height: auto !important;
     width: 100% !important;
 }
 
+.p-html-description a {
+    height: auto !important;
+}
+
 .p-html-description ul {
+    height: auto !important;
     padding: 0 !important;
+}
+
+.p-html-description ul li {
+    height: auto !important;
+    padding: 4px 0 !important;
 }
 
 .p-html-description img {
